--- a/src/ch02-00-es6.md
+++ b/src/ch02-00-es6.md
@@ -1,1 +1,5 @@
 # ES6
+
+ECMAScript 2015 (also known as ES6 and often referred to as `Harmony`) is the 6th major release of the ECMAScript language specification.
+
+I am going to cover the most important features here to get you started with ES6 and then be able moving to TypeScript and Angular faster.
